<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestPermissionFragment">

    <TextView
        android:id="@+id/tv_onboarding_request_permission_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="30dp"
        android:textColor="#121212"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/onboarding_request_permission_title" />

    <TextView
        android:id="@+id/tv_onboarding_request_permission_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="7dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_request_permission_title"
        tools:text="@string/onboarding_request_permission_description" />

    <TextView
        android:id="@+id/tv_onboarding_permission1_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="52dp"
        android:text="@string/onboarding_permission1_title"
        android:textColor="#121212"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_request_permission_description" />

    <TextView
        android:id="@+id/tv_onboarding_permission1_description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="7dp"
        android:text="@string/onboarding_permission1_description"
        android:textColor="#121212"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_permission1_title" />

    <ImageView
        android:id="@+id/iv_onboarding_permission1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/onboarding_permission1_content_description"
        android:paddingVertical="7dp"
        android:paddingStart="10dp"
        android:paddingEnd="9dp"
        android:src="@drawable/all_next_icon_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_request_permission_description" />

    <View
        android:id="@+id/view_onboarding_permission1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="#121212"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_permission1_description"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_onboarding_permission2_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:text="@string/onboarding_permission2_title"
        android:textColor="#121212"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_onboarding_permission1" />

    <TextView
        android:id="@+id/tv_onboarding_permission2_description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="7dp"
        android:text="@string/onboarding_permission2_description"
        android:textColor="#121212"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_permission2_title" />

    <ImageView
        android:id="@+id/iv_onboarding_permission2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/onboarding_permission2_content_description"
        android:paddingVertical="7dp"
        android:paddingStart="10dp"
        android:paddingEnd="9dp"
        android:src="@drawable/all_next_icon_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_onboarding_permission1" />

    <View
        android:id="@+id/view_onboarding_permission2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="#121212"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_permission2_description"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_onboarding_permission3_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:text="@string/onboarding_permission3_title"
        android:textColor="#121212"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_onboarding_permission2" />

    <TextView
        android:id="@+id/tv_onboarding_permission3_description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="7dp"
        android:text="@string/onboarding_permission3_description"
        android:textColor="#121212"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_permission3_title" />

    <ImageView
        android:id="@+id/iv_onboarding_permission3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/onboarding_permission3_content_description"
        android:paddingVertical="7dp"
        android:paddingStart="10dp"
        android:paddingEnd="9dp"
        android:src="@drawable/all_next_icon_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_onboarding_permission2" />



</androidx.constraintlayout.widget.ConstraintLayout>