<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DoneSingUpFragment">

    <ImageView
        android:id="@+id/iv_onboarding_done_sing_up_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:background="#BBC6FF"
        android:contentDescription="@string/onboarding_done_sing_up_image"
        />

    <TextView
        android:id="@+id/tv_onboarding_done_sing_up_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/onboarding_done_sing_up_title"
        android:textColor="#121212"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_onboarding_done_sing_up_image" />

    <TextView
        android:id="@+id/tv_onboarding_done_sing_up_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:textSize="13sp"
        android:gravity="center"
        android:text="@string/onboarding_done_sing_up_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_done_sing_up_title" />


</androidx.constraintlayout.widget.ConstraintLayout>